--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   padding: 1rem;
   background-color: #ebebeb;
   border-radius: 20px;
+  margin-bottom: 1rem;
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
